test/spec_vectors/type-subtyping/ok/module_36.wat
(module (type $t1 (sub (func))) (type $t2 (sub final (func))) (func (import "M2" "f2") (type $t1)))