test/spec_vectors/type-subtyping/fail/module_58.wat
(module (type $t (sub (func))) (type $s (sub final $t (func))) (type $u (sub $s (func))))